<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#F5F5F5"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context="com.reiya.pixiv.other.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg_login"
        android:scaleType="fitStart"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="@dimen/activity_vertical_margin">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/pixiv_login"
                android:textColor="#333"
                android:textSize="32dp"/>
        </FrameLayout>


        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_account"
                        android:inputType="text"
                        android:maxLines="1"
                        android:imeOptions="actionNext"/>

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/iv_clear_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="8dp"
                    android:visibility="gone"
                    app:srcCompat="@drawable/ic_clear_black_24px"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"/>

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/iv_clear_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="8dp"
                    android:visibility="gone"
                    app:srcCompat="@drawable/ic_clear_black_24px"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp">

                <Button
                    android:id="@+id/register_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/action_register"
                    android:textColor="#999"/>

                <Button
                    android:id="@+id/sign_in_button"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold"/>
            </FrameLayout>

        </LinearLayout>
    </LinearLayout>

    <com.reiya.pixiv.view.RippleView
        android:id="@+id/ripple_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:ripple_color="@color/colorPrimary"/>

    <LinearLayout
        android:id="@+id/login_progress_view"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/processing_login"
            android:textColor="#fff"
            android:textSize="24dp"/>

        <ProgressBar
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:id="@+id/login_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:indeterminate="true"
            android:indeterminateTint="#fff"/>
    </LinearLayout>


</FrameLayout>
